# evpn_connector

./: .coveragerc  .dockerignore  .gitignore  AUTHORS  MANIFEST.in  README.md  bindep.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yaml
.gitlab/ci/: devenv-pipeline.gitlab-ci.yml
.gitlab/ci/templates/: devenv.gitlab-ci.yml  functional-tests.gitlab-ci.yml
docs/: requirements.txt
docs/demo/: CONFIGURE.md  PREPARE_BORDER.md  PREPARE_COMPUTE.md
docs/demo/border/: ceos_config.txt
docs/demo/compute1/: evpn_connector.cfg  gobgp.conf
docs/demo/compute1/vm_conf/: vm1.json  vm2.json
docs/demo/compute2/: evpn_connector.cfg  gobgp.conf  logging.yaml
docs/demo/compute2/vm_conf/: vm3.json
docs/source/: conf.py  download-plantuml.py  index.rst
etc/evpn_connector/: evpn_connector.cfg.sample
etc/gobgpd/: gobgp.conf.sample
etc/systemd/: evpn-connector.service
evpn_connector/: version.py
evpn_connector/bgp/: client.py
evpn_connector/cmd/: evpn.py
evpn_connector/common/: conf_opts.py  config.py  constants.py  log.py  metrics.py  sentry.py
evpn_connector/common/services/: softirq.py
evpn_connector/ovs/: client.py  common.py  shell.py
evpn_connector/service/: evpn.py  objects.py
evpn_connector/tests/: conftest.py
evpn_connector/tests/unit/: test_bgp_client.py  test_evpn_objects.py  test_evpn_service.py  test_example.py  test_ovs_client.py  test_sentry.py  utils.py
tools/: create_clients_dp.sh  gen_clients_cfgs.py  replace-protobuf-local-imports.sh
