[metadata]
name = evpn-connector
summary = The main task of this daemon is to interact with the gobgp and ovs to provide a connection using the EVPN protocol
description_file =
    README.md
author = VK Tech
author_email = digital.tech@corp.mail.ru
home_page = https://github.com/vktechdev/evpn_connector
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    evpn_connector
data_files =
    share/evpn_connector =
        etc/evpn_connector/evpn_connector.cfg.sample

[entry_points]
console_scripts =
    evpn-connector = evpn_connector.cmd.evpn:main
oslo.config.opts =
    common = evpn_connector.common.conf_opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
